# simpl-solana

./: .gitignore  Cargo.toml  README.md  dfx.json
src/backend/: Cargo.toml
src/backend/src/: helpers.rs  lib.rs  structs.rs
src/backend/src/razorpay/: config.rs  mod.rs  payment.rs
src/backend/src/razorpay/structs/: contact.rs  create_payout.rs  fund_account.rs  mod.rs
src/ic-solana/: Cargo.toml
src/ic-solana/src/: lib.rs  logs.rs  rpc_client.rs  system_instruction.rs
src/protocol/: Cargo.toml  protocol.did
src/protocol/src/: constants.rs  lib.rs  solana_transactions.rs
src/razorpay/: Cargo.toml
src/razorpay/src/: constants.rs  create_order.rs  lib.rs  payout.rs
src/simpl-solana-backend/: Cargo.toml
