[package]
name = "ic-solana"
description = "Interact with Solana blockchain from the Internet Computer."
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
candid = "0.10.11"
flate2 = "1.0.35"
futures = "0.3.31"
getrandom = { version = "0.2", features = ["custom"] }
ic-canister-log = "0.2.0"
ic-cdk = "0.17.1"
ic-metrics-encoder = "1.1.1"
ic-sha3 = "1.0.0"
serde = "1.0.217"
serde-big-array = "0.5.1"
serde_bytes = "0.11.15"
serde_json = "1.0.134"
thiserror = "2.0.9"
url = "2.5.4"
ic-crypto-ed25519 = { git = "https://github.com/dfinity/ic", package = "ic-crypto-ed25519" }
