[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
borsh = "1.5.5"
borsh-derive = "1.5.5"
candid = "0.10.11"
ic-cdk = "0.17.1"
ic-sha3 = "1.0.0"
ic-solana = { path = "../ic-solana" }
razorpay = { path = "../razorpay" }
serde_json = "1.0.135"
